# ai-connection

./: .gitignore  README.md
docs/: commands.md  mvp.md  packaging.md
src-tauri/: Cargo.toml  build.rs  index.html  tauri.conf.json
src-tauri/scripts/: create-icon.sh
src-tauri/src/: main.rs  models.rs  probe.rs  storage.rs
