[package]
name = "ai-connection-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
image = { version = "0.25", default-features = true }

[dependencies]
tauri = { version = "2.10", default-features = false, features = ["tray-icon", "wry", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
